# django_departments

./: README.md  pyproject.toml  requirements.txt
django_departments/: manage.py
django_departments/core/: data_factories.py
django_departments/departments/: admin.py  apps.py  models.py  signals.py  urls.py  validators.py  views.py
django_departments/departments/management/commands/: populate_fake_data.py
django_departments/departments/migrations/: 0001_initial.py
django_departments/django_departments/: asgi.py  settings.py  urls.py  wsgi.py
django_departments/templates/: base.html
django_departments/templates/departments/: department_item.html  department_list.html
