[tool.poetry]
name = "django-departments"
version = "0.1.0"
description = ""
authors = ["Nikita Smykov <132088678+Apicqq@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
